k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-svc
spec:
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
